cmake_minimum_required(VERSION 3.17)
project(day3)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task1.cpp)
add_executable(task02 task2.cpp)
add_executable(task03 task3.cpp)
add_executable(task04 task4.cpp)
add_executable(task05 task5.cpp)
add_executable(task06 task6.cpp)
add_executable(task07 task7.cpp)